fix: overflow on right of page

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ body {
     grid-auto-rows: max-content;
     align-items: center;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 /* Navbar */
